<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>de.dytanic.cloudnet</groupId>
    <artifactId>cloudnet</artifactId>
    <packaging>pom</packaging>
    <version>dev-snapshot</version>

    <name>CloudNet-Parent</name>
    <url>https://cloudnetservice.eu/</url>

    <properties>
        <!-- compiler and encoding -->
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.targetEncoding>UTF-8</project.build.targetEncoding>
        <service.version>2.1.17</service.version>
        <service.type>RELEASE</service.type>
        <!-- Dependencies -->
        <dependency.netty.version>4.1.43.Final</dependency.netty.version>
        <!-- Should be kept in sync with minecraft -->
        <dependency.gson.version>2.8.0</dependency.gson.version>
        <dependency.gson.new.version>2.8.6</dependency.gson.new.version>
        <dependency.jline.version>2.14.6</dependency.jline.version>
        <dependency.jopt-simple.version>5.0.4</dependency.jopt-simple.version>
        <dependecy.snakeyaml.version>1.25</dependecy.snakeyaml.version>
        <dependency.bungeecord.version>1.8-1.12</dependency.bungeecord.version>
        <dependency.spigot.version>1.8.8-R0.1-SNAPSHOT</dependency.spigot.version>
        <dependency.vaultapi.version>1.7</dependency.vaultapi.version>
        <dependency.typetools.version>0.6.1</dependency.typetools.version>
        <!-- test dependencies -->
        <test.junit.version>4.12</test.junit.version>
        <!-- Plugins -->
        <plugin.shade.version>3.2.1</plugin.shade.version>
        <plugin.javadoc.version>3.1.1</plugin.javadoc.version>
        <plugin.jar.version>3.2.0</plugin.jar.version>
        <plugin.resources.version>3.1.0</plugin.resources.version>
        <plugin.antrun.version>1.8</plugin.antrun.version>
        <plugin.source.version>3.2.0</plugin.source.version>
    </properties>

    <developers>
        <developer>
            <id>main</id>
            <name>Tarek H.</name>
            <url>https://dytanic.de</url>
        </developer>
    </developers>

    <modules>
        <module>cloudnet-lib</module>
        <module>cloudnet-core</module>
        <module>cloudnet-cord</module>
        <module>cloudnet-wrapper</module>
        <module>cloudnet-api</module>
        <module>cloudnet-tools</module>
        <module>cloudnet-modules</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${plugin.javadoc.version}</version>
                <configuration>
                    <show>private</show>
                    <additionalJOption>-Xdoclint:none</additionalJOption>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>aggregate</id>
                        <goals>
                            <goal>aggregate-jar</goal>
                        </goals>
                        <phase>site</phase>
                        <configuration>
                            <show>private</show>
                            <additionalJOption>-Xdoclint:none
                            </additionalJOption>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${plugin.source.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
